# rosidl_typesupport_common

./: CMakeLists.txt
cmake/: rosidl_typesupport_c_generate_interfaces.cmake  rosidl_typesupport_cpp_generate_interfaces.cmake
include/rosidl_typesupport_common/: identifier.h  message_type_support_dispatch.h  namespace.h  service_type_support_dispatch.h
resource/: msg__type_support.cpp.em  rosidl_typesupport_c__visibility_control.h.in  srv__type_support.cpp.em
src/: message_type_support_dispatch.cpp  service_type_support_dispatch.cpp  type_support_dispatch.hpp
